[package]
name = "helpable"
version = "0.1.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
dialoguer = "0.4.0"
github-client = { path = "../github-client"}
lazy_static = "1.3.0"
regex = "1.2.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
structopt = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
