[package]
name = "helpable"
version = "0.5.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
config = "0.9"
dialoguer = "0.4.0"
dirs = "2.0.2"
helpable-derive = { path = "../helpable-derive" }
github-client = "0.1.0"
regex = "1.2.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
structopt = "0.3"
text_io = "0.1.7"
webbrowser = "0.5.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
